--- a/style.css
+++ b/style.css
@@ -4,3 +4,11 @@ body {
 h1 {
   text-align: center;
 }
+
+.container {
+  margin: auto;
+  width: 90%;
+  max-width: 500px;
+  border: solid 1px;
+  text-align: center;
+}
