--- a/style.css
+++ b/style.css
@@ -1,11 +1,34 @@
+body {
+  color: white;
+  font-size: 1.3rem;
+}
+
 h1 {
   text-align: center;
+  color: black;
 }
 
 .container {
   margin: auto;
   width: 90%;
   max-width: 500px;
-  border: solid 1px;
+  border: solid 1px black;
+  border-radius: 1rem;
+  box-shadow: 0 0 10px 10px black;
   text-align: center;
+  background-color: black;
+}
+
+.pokemon-name {
+  font-size: 3rem;
+  font-weight: bolder;
+}
+
+img {
+  border: solid 1px black;
+  border-radius: 1rem;
+  width: 250px;
+  image-rendering: pixelated;
+  box-shadow: 0 0 10px 10px black;
+  margin-top: 20px;
 }
