--- a/style.css
+++ b/style.css
@@ -32,3 +32,33 @@ img {
   box-shadow: 0 0 10px 10px black;
   margin-top: 20px;
 }
+
+h2 {
+  margin: 0;
+  margin-top: 1rem;
+}
+
+.stats {
+  margin-bottom: 20px;
+}
+
+.form {
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+input {
+  border-radius: 10px;
+  border: solid 1px black;
+  padding: 3px 10px;
+}
+
+button {
+  background-color: rgb(80, 175, 205);
+  border: none;
+  border-radius: 0.3rem;
+}
+
+button:hover {
+  background-color: rgb(80, 150, 180);
+}
